<resources>
    <string name="app_name">HidraMeta</string>

    -- Tela Principal --
    <string name="welcome">Seja bem-vindo!</string>
    <string name="add_task">Adicionar Tarefa</string>
    <string name="see_task_list">Ver lista de tarefas</string>
    <string name="see_progress">Ver o seu progresso</string>
    <string name="add_water_fab">Adicionar quantidade de água</string>

    -- Tela Cadastro --
    <string name="text_intro">Para começarmos, coloque as informações necessárias abaixo:</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_peso">Digite seu peso (kg)</string>
    <string name="btn_cadastrar">Cadastrar</string>

    <string name="error_nome_obrigatorio">O nome é obrigatório</string>
    <string name="error_email_obrigatorio">O e-mail é obrigatório</string>
    <string name="error_senha_obrigatoria">A senha é obrigatória</string>
    <string name="error_peso_obrigatorio">O peso é obrigatório</string>

    <string name="error_email_invalido">Formato de e-mail inválido</string>
    <string name="error_senha_curta">A senha deve ter pelo menos 6 caracteres</string>
    <string name="error_peso_invalido">Peso inválido</string>

    <string name="progress_title">Seu Progresso</string>
    <string name="water_progress_today">Progresso de Hoje</string>
    <string name="water_summary_format">Hoje: %1$d ml / %2$d ml</string>
    <string name="water_percentage_format">%1$d%%</string>

    <string name="water_summary_dashboard">%1$d / %2$d ml</string>
    <string name="task_summary_dashboard">%1$d pendentes</string>
</resources>